Containerization updates
