# internal/delivery/rest/models/tenant.go
@@ -3,3 +3,7 @@ package models
 type TenantCreateRequest struct {
 	Name string `json:"name" validate:"required"`
 }
+
+type TenantUpdateRequest struct {
+	Name string `json:"name" validate:"required"`
+}
